add fc00-profile dependency. implement 'fc00 profile'

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "url": "https://github.com/fc00/node-fc00/issues"
   },
   "dependencies": {
+    "cjdnskeys": "^0.1.0",
     "fc00-addr": "^1.0.1",
-    "fc00rc": "^1.1.0",
-    "pad-ipv6": "^1.0.1",
-    "cjdnskeys": "^0.1.0"
+    "fc00-profile": "^1.0.0",
+    "fc00rc": "^1.2.0",
+    "pad-ipv6": "^1.0.1"
   }
 }
